Fix another Calendar layout bug

--- a/src/calendars.less
+++ b/src/calendars.less
@@ -144,7 +144,8 @@
         display: flex;
         flex-direction: column;
         height: 11rem;
-        overflow-x: hidden;
+        overflow: hidden;
+        padding: 0;
 
         &:nth-child(7n) {
           border-right: 0;
@@ -158,13 +159,15 @@
         align-self: flex-end;
         flex: 0 0 2.4rem;
         height: 2.4rem;
+        margin-right: .5rem;
+        margin-top: .5rem;
         padding: .1rem;
         width: 2.4rem;
 
         &.badge {
           &::after {
-            top: 0;
-            right: 0;
+            top: .2rem;
+            right: .2rem;
           }
         }
       }
@@ -198,21 +201,25 @@
     }
 
     .calendar-events {
+      flex-grow: 1;
       line-height: 1;
       overflow-y: auto;
-      padding: .5rem 0;
+      padding: .5rem;
     }
 
     .calendar-event {
       background: @secondary-color;
+      border-radius: @border-radius;
       color: @primary-color;
       font-size: 1.2rem;
-      .label-base();
+      display: block;
+      margin: .2rem auto;
       overflow: hidden;
+      padding: .3rem .4rem;
       text-align: left;
       text-overflow: ellipsis;
+      vertical-align: baseline;
       white-space: nowrap;
-      width: 100%;
     }
   }
 }
