--- a/src/mixins.less
+++ b/src/mixins.less
@@ -17,7 +17,7 @@
   border-color: @color;
 }
 .label-base() {
-  border-radius: .2rem;
+  border-radius: @border-radius;
   display: inline-block;
   line-height: 1;
   padding: .3rem .4rem;
